examples/negative/name_errors/L3/8_non_local_var_proc.ob
MODULE NonLocalVarProc;

PROCEDURE FOO;
  VAR x: INTEGER;

  PROCEDURE BAR;
    BEGIN
      x := 42;
    END BAR;
  
  END FOO;

END NonLocalVarProc.
